# genima

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  model-card.md  pyproject.toml
controller/: eval_act.py  eval_genima.py  train_act.py
controller/agent/: __init__.py  diffusion_agent.py  sd_controlnet_agent.py  sd_pix2pix_agent.py  sdxl_controlnet_agent.py
controller/cfgs/: controller.yaml  eval_act.yaml  eval_genima.yaml
controller/cfgs/colosseum/: distractor_objects.yaml  lighting_variations.yaml  random_background_textures.yaml  random_camera_poses.yaml  random_object_color.yaml  random_table_textures.yaml
controller/cfgs/method/: genima_act.yaml
controller/env/: rlbench.py  rlbench_utils.py
controller/env/wrappers/: action_normalization_wrapper.py  proprio_norm_wrapper.py
controller/method/: genima_act.py
controller/utils/: dataloader.py  misc.py
diffusion/: README.md  train_controlnet_genima.py  train_controlnet_sdxl_genima.py  train_instruct_pix2pix_genima.py
diffusion/rlbench_dataset/: rlbench_dataset.py
notebooks/: render.ipynb
render/: joint_marker.py  render_data.py
render/cfgs/: render.yaml
scripts/: download_mil_textures.sh  download_quickstart.sh  install_rlbench.sh
